# medbuddy

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 872ac1bdef21_initial_schema.py
app/: config.py  database.py  main.py  scheduler.py
app/handlers/: checkin_handler.py  message_handler.py  onboarding_handler.py
app/models/: __init__.py  adherence.py  conversation.py  medication.py  user.py
app/services/: drug_service.py  dspy_service.py  encryption.py  line_service.py  pipeline.py  rate_limiter.py  sanitiser.py  voice_service.py
docs/: PRD.md  TDD.md
tests/: test_compliance.py  test_dspy_service.py  test_encryption.py  test_line_service.py  test_pipeline.py  test_sanitiser.py  test_voice_service.py
