[project]
name = "medbuddy"
version = "0.1.0"
description = "AI-powered medication management assistant for elderly users via LINE"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    # Web framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    # LLM orchestration
    "dspy>=2.6.0",
    "langgraph>=0.4.0",
    "langgraph-checkpoint-postgres>=2.0.0",
    "langchain-core>=0.3.0",
    # Google Cloud (STT + TTS)
    "google-cloud-speech>=2.28.0",
    "google-cloud-texttospeech>=2.21.0",
    # LINE Messaging
    "line-bot-sdk>=3.22.0",
    # Encryption
    "cryptography>=44.0.0",
    # Configuration
    "pydantic-settings>=2.7.0",
    # Scheduling
    "apscheduler>=3.10.4",
    # HTTP client
    "httpx>=0.28.0",
    # Audio processing
    "pydub>=0.25.1",
    "google-generativeai>=0.8.6",
    "edge-tts>=7.2.8",
    "google-genai>=1.70.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "ruff>=0.8.0",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific
]
ignore = [
    "S101",    # assert used in tests
    "S104",    # possible binding to all interfaces
    "RUF001",  # fullwidth CJK punctuation is intentional (Traditional Chinese content)
    "RUF059",  # unused unpacked variables in tests are fine for readability
    "S105",    # hardcoded passwords in tests are test fixtures
    "S607",    # partial executable path for ffmpeg is intentional
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
filterwarnings = [
    "ignore::DeprecationWarning",
]
